Closed Bug 124358 Opened 24 years ago Closed 24 years ago

ImportNode

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: peterv, Assigned: peterv)

Details

Attachments

(1 file)

When I .importNode an element from a different document and then append it to the current document I get ###!!! ASSERTION: element not in the document: 'doc != nsnull', file nsChildIterator.cpp, line 54 and it doesn't get displayed. Patch coming up.
Comment on attachment 68528 [details] [diff] [review] set document before calling ContentInserted sr=jst
Attachment #68528 - Flags: superreview+
Comment on attachment 68528 [details] [diff] [review] set document before calling ContentInserted r=axel@pike.org
Attachment #68528 - Flags: review+
Checked in.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
verified patch checked in
Status: RESOLVED → VERIFIED
Component: DOM: Core → DOM: Core & HTML
QA Contact: stummala → general
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: