Fix importNode, need to set the document before notifying. Bug 124358. r=Pike, sr=jst.